# cargo-apk-cpp-test

./: Cargo.toml  README.md
apk-crate/: Cargo.toml  build.rs
apk-crate/src/: lib.rs
c-crate/: Cargo.toml  build.rs
c-crate/src/: add.c  lib.rs
cpp-crate/: Cargo.toml  build.rs
cpp-crate/src/: lib.rs  sub.cpp
desktop-crate/: Cargo.toml  build.rs
desktop-crate/src/: main.rs
src/: lib.rs
