[package]
name = "cargo-apk-cpp-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
libc = "0.2"
log = "0.4.14"
ndk = { version = "0.6.0", features = ["trace"] }
ndk-context = "0.1.0"
ndk-glue = { version = "0.6.0", features = ["logger"] }

c-crate = { path = "../c-crate" }
cpp-crate = { path = "../cpp-crate", optional = true}

[features]
with_cpp = ["cpp-crate"]
default = ["with_cpp"]

[package.metadata.android.sdk]
build_targets = [ "aarch64-linux-android"] # also "armv7-linux-androideabi"

min_sdk_version = 23
target_sdk_version = 28