[package]
name = "desktop-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-crate = { path = "../c-crate" }
cpp-crate = { path = "../cpp-crate", optional = true}

[features]
with_cpp = ["cpp-crate"]

#default = ["with_cpp"]